# rs-smtp

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: Cargo.toml  simple.rs  with_starttls_support.rs
examples/src/: outbound_server.rs  simple.rs  with_starttls_support.rs
rs-smtp/: Cargo.toml
rs-smtp/src/: backend.rs  conn.rs  data.rs  lib.rs  server.rs  smtp.rs  stream.rs
rs-smtp/src/sasl/: anonymous.rs  mod.rs  plain.rs  sasl.rs
src/: backend.rs  conn.rs  data.rs  lengthlimit_reader.rs  lib.rs  main.rs  parse.rs  server.rs  stream.rs
src/textproto/: mod.rs  pipeline.rs  textproto.rs  writer.rs
