[package]
name = "rust-smtp-server"
version = "0.1.0"
edition = "2021"
authors = ["Nick Westendorf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
regex = "1"

tokio = { version = "1.26.0", features = ["full"] }
tokio-rustls = "0.23.4"
async-trait = "0.1.67"
rustls-pemfile = "1"
futures = "0.3"