[package]
name = "rust-smtp-server"
version = "0.1.1"
description = "A rust smtp server library."

edition = "2021"
license = "MIT"
authors = ["Nick Westendorf"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
regex = "1"

tokio = { version = "1.26.0", features = ["full"] }
tokio-rustls = "0.23.4"
async-trait = "0.1.67"

[dev-dependencies]
rustls-pemfile = "1"

[[bin]]
name = "simple"
path = "examples/simple.rs"

[[bin]]
name = "with_starttls_support"
path = "examples/with_starttls_support.rs"