[package]
authors = ["Nick Westendorf <nick@dunef.io>"]
edition = "2021"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "simple"
path = "src/simple.rs"

[[bin]]
name = "with-starttls-support"
path = "src/with_starttls_support.rs"

[[bin]]
name = "outbound-server"
path = "src/outbound_server.rs"

[dependencies]
rs-smtp = "1"

anyhow = "1.0"
tokio = { version = "1.26.0", features = ["full"] }
async-trait = "0.1.67"
futures = "0.3"
rustls-pemfile = "1"
base64 = "0.21.0"
regex = "1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
trust-dns-resolver = "0.22"
mail-send = "0.3.3"
