[package]
name = "rs-smtp"
version = "1.0.1"
description = "An ESMTP server library written in Rust."

edition = "2021"
license = "MIT"
authors = ["Nick Westendorf <nick@dunef.io>"]

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
regex = "1"
log = "0.4"

futures = "0.3"
tokio = { version = "1.26.0", features = ["full"] }
tokio-rustls = "0.23.4"
async-trait = "0.1.67"
base64 = "0.21.0"